k8s-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privacy-redirect
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: privacy-redirect-ingress
  namespace: privacy-redirect
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_types text/plain application/xml images/* image/* text/* application/json image/jpg;
spec:
  tls:
    - hosts:
        - privacydir.com
  rules:
    - host: privacydir.com
      http:
        paths:
          - backend:
              serviceName: privacy-redirect-service
              servicePort: 80
---
kind: Deployment

apiVersion: apps/v1
metadata:
  name: privacy-redirect
  namespace: privacy-redirect
  labels:
    app: privacy-redirect
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: privacy-redirect

  template:
    metadata:
      labels:
        app: privacy-redirect
    spec:
      containers:
        - name: privacy-redirect
          image: mustakimali/privacy-redirect:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck?t=liveness
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 50Mi
---
kind: Service

apiVersion: v1
metadata:
  name: privacy-redirect-service
  namespace: privacy-redirect
spec:
  selector:
    app: privacy-redirect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
